--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -508,7 +508,6 @@ section.connect {
 
 footer {
     background-color: $body-color;
-    min-height: 732px;
     color: #fff;
     h5 {
         font-weight: 600;
@@ -526,6 +525,104 @@ footer {
             color: $lighter-grey;
             &:hover {
                 color: $lighter-grey;
+            }
+        }
+    }
+    .footer_contacts {
+        margin-right: -15px;
+        h5 {
+            color: $lighter-grey;
+            margin-bottom: 10px;
+            margin-top: 1.5rem;
+        }
+        .tel_num {
+            color: #fff;
+            font-weight: 600;
+            font-size: 20px;
+        }
+        .social {
+            display: flex;
+            justify-content: space-between;
+            flex-flow: row wrap;
+            .social_link {
+                height: 40px;
+                width: 40px;
+                background-color: $dark-grey;
+                transition: background-color 0.3s ease-in-out;
+                color: #fff;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                &:hover {
+                    background-color: $pumpkin-orange;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+    .copyright {
+        font-size: 14px;
+        font-weight: bold;
+    }
+    .articles {
+        margin-top: 5rem;
+    }
+    .footer_slider {
+        padding-left: 20px;
+        padding-right: 20px;
+        position: relative;
+        .slick-arrow {
+            background-color: transparent;
+            border: 0;
+            outline: 0;
+            font-size: 30px;
+            position: absolute;
+            color: #fff;
+            top: 0;
+            bottom: 0;
+            margin: auto 0;
+            padding: 0;
+            cursor: pointer;
+            &.slick-next {
+                right: -5px;
+            }
+            &.slick-prev {
+                left: -5px;
+            }
+        }
+        .article_link {
+            display: flex !important;
+            padding: 18px;
+            outline: 0;
+            color: #fff;
+            flex-flow: row nowrap;
+            justify-content: space-between;
+            align-items: flex-start;
+            h6 {
+                font-size: 14px;
+                font-weight: 600;
+                margin-left: 15px;
+            }
+            &:hover {
+                text-decoration: none;
+                .date {
+                    background-color: $pumpkin-orange;
+                    color: #fff;
+                }
+                h6 {
+                    text-decoration: underline;
+                }
+            }
+            .date {
+                height: 40px;
+                min-width: 40px;
+                border: 1px solid $pumpkin-orange;
+                color: $light-grey;
+                font-size: 11px;
+                text-transform: uppercase;
+                text-align: center;
+                font-weight: 600;
+                padding: 4px;
             }
         }
     }
